Nouveau Back-end et stckoge des champs des l'activite

--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Estimhouse</string>
-    <string name="nom_de_la_voie">Nom de la voie</string>
-    <string name="code_postal">%1$d</string>
-    <string name="nombre_de_piece">Nombre De Pièces</string>
-    <string name="surface"></string>
+    <string name="nombre_de_pieces">Nombre De Pièces</string>
+    <string name="surface" />
     <string name="valider">Valider</string>
     <string name="surfacetest">%1$d</string>
     <string name="valuealeatcodepostalText">%1$d</string>
