--- a/back-end/prediction_use.ipynb
+++ b/back-end/prediction_use.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "68ed4bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3c42bf9a",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9f1e877d",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +442,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5c6099c3",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +695,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "80cc2711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +708,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7be990a6",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +737,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "343134bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -751,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -765,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
