--- a/back-end/prediction_use.ipynb
+++ b/back-end/prediction_use.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
+   "id": "65c8dd52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
+   "id": "7d7217d4",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "id": "82db307a",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +431,7 @@
        "[2972 rows x 41 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "id": "f72087fb",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +685,7 @@
        "[230 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,20 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exemple de variables\n",
-    "surface = 180\n",
-    "type_local = 1 #1 pour maison, 2 pour appartement\n",
-    "surface_terrain = 200\n",
-    "nb_pieces = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
+   "id": "8454939f",
    "metadata": {},
    "outputs": [
     {
@@ -721,10 +713,55 @@
     {
      "data": {
       "text/plain": [
-       "285971.61"
+       "array([ 1.31048657e+03, -6.24152616e+04,  7.10813787e+01, -1.00067324e+04,\n",
+       "        1.28303208e+05])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Coefficient de la régression linéaire :\n",
+    "pr.get_coef()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5b4058da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemple de variables\n",
+    "surface = 80\n",
+    "type_local = 1 #1 pour maison, 2 pour appartement\n",
+    "surface_terrain = 200\n",
+    "nb_pieces = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "da9096ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hiba/.local/lib/python3.8/site-packages/sklearn/base.py:443: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "154922.95"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,18 +770,11 @@
     "# Foction de prédiction\n",
     "pr.predict(surface, type_local, surface_terrain, nb_pieces)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -758,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
